--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi
-uvicorn
-gspread
-google-auth
+fastapi==0.128.0
+uvicorn==0.22.0
+gspread==5.9.0
+google-auth==2.22.0
+gspread-formatting==1.1.7
