--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ GOOGLE_SERVICE_ACCOUNT_JSON=<
   "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/demoagsheet%40demoag.iam.gserviceaccount.com",
   "universe_domain": "googleapis.com"
 >
+
+SELF_URL=http://127.0.0.1:10000
+
