Add Render 24/7 algo with self-ping and Google Sheet integration

--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ GOOGLE_SERVICE_ACCOUNT_JSON=<
   "universe_domain": "googleapis.com"
 >
 
-SELF_URL=http://127.0.0.1:10000
+SELF_URL=https://demoag.onrender.com
 
